--- a/tokens-accounting/Cargo.toml
+++ b/tokens-accounting/Cargo.toml
@@ -18,6 +18,7 @@ parity-scale-codec.workspace = true
 variant_count.workspace = true
 
 [dev-dependencies]
+crypto = {path = '../crypto'}
 test-utils = { path = "../test-utils" }
 
 rstest.workspace = true
