--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,7 +10,7 @@ name: Code Coverage
 
 env:
   # We partition coverage tests into multiple parts to avoid filling diskspace in a single runner
-  PARTITIONS_COUNT: 1
+  PARTITIONS_COUNT: 5
 
 jobs:
   coverage:
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         # This range spans from `0` to `PARTITIONS_COUNT - 1`, where `PARTITIONS_COUNT` is the number of partitions (defined in env var above)
-        partition: [0]
+        partition: [0, 1, 2, 3, 4]
 
     steps:
       - id: skip-check
@@ -27,14 +27,6 @@ jobs:
         with:
           concurrent_skipping: "same_content_newer"
           skip_after_successful_duplicate: "true"
-
-      - name: Clean Disk Space
-        run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-
       - name: Install dependencies
         run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml
       - uses: actions/checkout@v1
