--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,7 +10,7 @@ name: Code Coverage
 
 env:
   # We partition coverage tests into multiple parts to avoid filling diskspace in a single runner
-  PARTITIONS_COUNT: 2
+  PARTITIONS_COUNT: 3
 
 jobs:
   coverage:
@@ -19,20 +19,14 @@ jobs:
     strategy:
       matrix:
         # This range spans from `0` to `PARTITIONS_COUNT - 1`, where `PARTITIONS_COUNT` is the number of partitions (defined in env var above)
-        partition: [0, 1]
+        partition: [0, 1, 2]
 
     steps:
-      - id: skip-check
-        uses: fkirc/skip-duplicate-actions@v5.3.0
-        with:
-          concurrent_skipping: "same_content_newer"
-          skip_after_successful_duplicate: "true"
       - name: Install dependencies
         run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml
       - uses: actions/checkout@v1
       - uses: actions-rs/toolchain@v1
         with:
-          # TODO: Inspect coverage, and change toolchain to stable
           toolchain: nightly-2023-08-01
           override: true
       - uses: actions-rs/cargo@v1
