--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,7 +10,7 @@ name: Code Coverage
 
 env:
   # We partition coverage tests into multiple parts to avoid filling diskspace in a single runner
-  PARTITIONS_COUNT: 3
+  PARTITIONS_COUNT: 5
 
 jobs:
   coverage:
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         # This range spans from `0` to `PARTITIONS_COUNT - 1`, where `PARTITIONS_COUNT` is the number of partitions (defined in env var above)
-        partition: [0, 1, 2]
+        partition: [0, 1, 2, 3, 4]
 
     steps:
       - name: Install dependencies
@@ -41,8 +41,11 @@ jobs:
           RUSTFLAGS: "-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off"
           RUSTDOCFLAGS: "-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off"
       - id: coverage
-        uses: actions-rs/grcov@v0.1
+        uses: actions-rs/grcov@v0.1.5
+        with:
+          output-type: lcov
+          output-path: ./lcov.info
       - uses: actions/upload-artifact@v2
         with:
-          name: code-coverage-report
+          name: code-coverage-report-${{ matrix.partition }}
           path: ${{ steps.coverage.outputs.report }}
