--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -47,4 +47,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report-${{ matrix.partition }}
-          path: ${{ steps.coverage.outputs.report }}
+          path: ./lcov.info
