--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -42,6 +42,8 @@ jobs:
           RUSTDOCFLAGS: "-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off"
       - id: coverage
         uses: actions-rs/grcov@v0.1
+        with:
+          config: build-tools/coverage/grcov.yml
       - uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report-${{ matrix.partition }}
@@ -70,6 +72,8 @@ jobs:
           RUSTDOCFLAGS: "-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off"
       - id: coverage
         uses: actions-rs/grcov@v0.1
+        with:
+          config: build-tools/coverage/grcov.yml
       - uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report-fn-tests
