--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -10,6 +10,7 @@ rust-version.workspace = true
 [dependencies]
 common = {path = '../common'}
 crypto = {path = '../crypto'}
+logging = { path = "../logging/" }
 serialization = { path = '../serialization' }
 utils = { path = '../utils' }
 
