--- a/.github/workflows/code_checks.yml
+++ b/.github/workflows/code_checks.yml
@@ -18,7 +18,7 @@ jobs:
           concurrent_skipping: "same_content_newer"
           skip_after_successful_duplicate: "true"
       - name: Install dependencies
-        run: sudo apt-get install -yqq --no-install-recommends build-essential python3 python3-toml
+        run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml
       - uses: actions/checkout@v1
       - run: rustup component add clippy
 
