--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,7 @@ criterion = "0.5"
 crossterm = "0.27"
 derive_more = "0.99"
 directories = "5.0"
+dyn-clone = "1.0"
 enum-iterator = "1.4"
 expect-test = "1.3"
 fallible-iterator = "0.3"
