--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,14 +88,12 @@ jobs:
           concurrent_skipping: "same_content_newer"
           skip_after_successful_duplicate: "true"
       - name: Install dependencies
-        run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml podman
+        run: sudo apt-get install -yqq --no-install-recommends build-essential libgtk-3-dev python3 python3-toml podman build-essential pkg-config libssl-dev
+      - name: Install rust deps
+        run: sudo apt-get install -yqq build-essential pkg-config libssl-dev
       - uses: actions/checkout@v2
-      - name: Install rust stable
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          default: true
+      - name: Install rust
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
