--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -22,12 +22,8 @@ jobs:
         node-version: [18.x]
 
     steps:
-      - name: Install rust stable
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          default: true
+      - name: Install rust
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
